--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "serve": "vite preview"
   },
   "dependencies": {
+    "@ant-design/icons": "^4.6.2",
+    "antd": "^4.15.2",
     "react": "^17.0.0",
     "react-dom": "^17.0.0",
     "react-router-dom": "^5.2.0"
@@ -16,7 +18,9 @@
     "@types/react-dom": "^17.0.0",
     "@types/react-router-dom": "^5.1.7",
     "@vitejs/plugin-react-refresh": "^1.3.1",
+    "less": "^4.1.1",
     "typescript": "^4.1.2",
-    "vite": "^2.1.0"
+    "vite": "^2.1.0",
+    "vite-plugin-imp": "^2.0.7"
   }
 }
