--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@types/react-router-dom": "^5.1.7",
     "@vitejs/plugin-react-refresh": "^1.3.1",
     "less": "^4.1.1",
+    "less-vars-to-js": "^1.3.0",
     "typescript": "^4.1.2",
     "vite": "^2.1.0",
     "vite-plugin-imp": "^2.0.7"
