--- a/package.json
+++ b/package.json
@@ -2,8 +2,11 @@
   "name": "vite-react-admin",
   "version": "0.0.0",
   "scripts": {
-    "dev": "vite",
-    "build": "tsc && vite build",
+    "dev": "vite --mode development",
+    "build": "tsc && vite build --mode release",
+    "build:dev":"tsc && vite build --mode development",
+    "build:beta":"tsc && vite build --mode beta",
+    "build:release":"tsc && vite build --mode release",
     "serve": "vite preview"
   },
   "dependencies": {
