--- a/package.json
+++ b/package.json
@@ -4,14 +4,17 @@
   "scripts": {
     "dev": "vite --mode development",
     "build": "tsc && vite build --mode release",
-    "build:dev":"tsc && vite build --mode development",
-    "build:beta":"tsc && vite build --mode beta",
-    "build:release":"tsc && vite build --mode release",
-    "serve": "vite preview"
+    "build:dev": "tsc && vite build --mode development",
+    "build:beta": "tsc && vite build --mode beta",
+    "build:release": "tsc && vite build --mode release",
+    "serve": "vite preview",
+    "deploy":"sh ./deploy.sh"
   },
   "dependencies": {
     "@ant-design/icons": "^4.6.2",
     "antd": "^4.15.2",
+    "axios": "^0.21.1",
+    "qs": "^6.10.1",
     "react": "^17.0.0",
     "react-dom": "^17.0.0",
     "react-router-dom": "^5.2.0"
